crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@dual_reverse_relations_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 440
expression: rendered
---
export const dual = pgTable("dual", {
  username: text("username").primaryKey(),
});

export const dualRelations = relations(dual, ({ one, many }) => ({
  usernameDualRel: many(dualRel, { relationName: "DualRelUsername" }),
  checkerUsernameDualRel: many(dualRel, { relationName: "DualRelCheckerUsername" }),
}));
