crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@dual_reverse_relations_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Dual struct {
	Username                  string    `gorm:"column:username;primaryKey;type:text" json:"username"`
	DualRelsByUsername        []DualRel `gorm:"foreignKey:Username" json:"-"`
	DualRelsByCheckerUsername []DualRel `gorm:"foreignKey:CheckerUsername" json:"-"`
}

func (Dual) TableName() string { return "dual" }
