crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@dual_reverse_relations_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations


from sqlmodel import Field, SQLModel


class Dual(SQLModel, table=True):
    __tablename__ = "dual"

    username: str = Field(primary_key=True)
