crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_article_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Article(models.Model):
    id = models.BigIntegerField(primary_key=True)
    users = models.ManyToManyField("User", through="ArticleUser", related_name="+")

    class Meta:
        managed = False
        db_table = "article"
